www/default/dashboard/style.css
body {
	font-family: 'Source Code Pro', monospace;
	background-color: #2b303b;
	color: #c0c5ce;
	padding: 3em;
	font-size: 16px;
	line-height: 1.6;
}

a {
	color: #ebcb8b;
	text-decoration: none;
}

a:hover {
	color: #d08770;
	text-decoration: default;
}

h2, h3, h4, h5 {
	margin-top: 0;
}

pre, code {
	background: #2b303b;
	border-radius: 4px;
	border: 1px solid #4f5b66;
}

code {
	color: #a3be8c;
	padding: .1em .2em;
}

pre {
	padding: 2em 1em;
	overflow-x: scroll;
}

#vvv_logo {
	font-size: 3em;
	font-weight: normal;
	color: white;
}

#vvv_logo > img {
	max-height: 1.1em;
	vertical-align: sub;
}

strong {
	color: #eff1f5;
}

#vvv_provision_fail,
#vvv_hosts_fail,
.top-notice-box.box {
	background: #bf616a;
	border: 1px solid #ebcb8b;
}

.grid, .grid50 {
	display: grid;
	grid-gap: 1em;
	margin-bottom: 1em;
}

.grid {
	grid-template-columns: 70% 30%;
}

.grid50 {
	/*grid-auto-columns: 50% 50%;*/
	grid-template-columns: repeat(2, 1fr);
	grid-gap: 1em;
	grid-auto-flow: dense;
}

.grid50 .box {
	margin-bottom: 0;
}

.box {
	border-radius:4px;
	padding: 2em;
	background: #343d46;
	box-sizing: border-box;
	margin-bottom:1em;
}

.site_item {
	margin: 0 -2em;
	padding: 1em 2em;
	border-top: 1px solid #2b303b;
}

.site_skip_provision {
	opacity: .4;
}

input,
.button {
	padding: .5em 1em;
	border: 1px solid #ebcb8b;
	border-radius: 4px;
	background: #343d46;
	color: #ebcb8b;
	font-family: 'Source Code Pro', monospace;
	font-size: 16px;
	margin-bottom: 1em;
}

input[type="submit"]:hover {
	cursor: pointer;
}

.button {
	display: inline-block;
	width: auto;
}

input:hover,
input:active,
input:focus,
.button:hover {
	border-color: #d08770;
	color: #d08770;
	text-decoration: none;
	outline: none;
}

.warning {
	color: #d08770;
	font-style: italic;
}


.right-column > .box,
.alt-box {
	background: #272b35;
	border: 1px solid #343d46;
}

.right-column > .box input,
.right-column >.box .button,
.alt-box input,
.alt-box .button {
	background: #272b35;
}
/* ... */

